# Cinemania

./: CMakeLists.txt  README.md  cinemania.cpp  cinemania.h  cinemania.ui  desktop.ini  listdisplay.cpp  listdisplay.h  listdisplay.ui  listmaker.cpp  listmaker.h  listmaker.ui  main.cpp  movie.h
